# OCRtoODT-Qt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  build_appimage.sh  config.yaml  ocr_profiles.json  project_dump.sh
.github/workflows/: build.yml  release.yml
dialogs/: OcrCompletionDialog.cpp  OcrCompletionDialog.h  aboutdialog.cpp  aboutdialog.h  export.cpp  export.h  helpdialog.cpp  helpdialog.h  pageframe.cpp  pageframe.h  searchhighlighter.cpp  searchhighlighter.h  settingsdialog.cpp  settingsdialog.h
docs/: README.md  README_DEVELOPER.md  RELEASE_NOTES_TEMPLATE.md  RELEASING_APPIMAGE.md  config_schema.md
docs/releases/: v3.0.5.md
resources/: OCRtoODT.desktop  docs.qrc  icons.qrc  languages.qrc  sample.qrc  sounds.qrc  themes.qrc  translations.qrc
resources/ocr_languages/: ocr_languages.json
resources/sample/: 0001.txt  0002.txt  0003.txt
resources/styles/: general_cards.qss
resources/themes/: dark.qss  light.qss
resources/translations/: ocrtoodt_en.qm  ocrtoodt_en.ts  ocrtoodt_ro.qm  ocrtoodt_ro.ts  ocrtoodt_ru.qm  ocrtoodt_ru.ts
scripts/: tag_from_cmake.sh
settings/: generalpane.cpp  generalpane.h  generalpane.ui  interfacepane.cpp  interfacepane.h  interfacepane.ui  interfacepane_language.cpp  interfacepane_preview.cpp  interfacepane_qss.cpp  interfacepane_samples.cpp  loggingpane.cpp  loggingpane.h  loggingpane.ui  odtpane.cpp  odtpane.h  odtpane.ui  preprocesspane.cpp  preprocesspane.h  preprocesspane.ui  recognitionpane.cpp  recognitionpane.h  recognitionpane.ui
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/0_input/: ClearController.cpp  ClearController.h  ImageThumbnailProvider.cpp  ImageThumbnailProvider.h  InputController.cpp  InputController.h  PdfPageProvider.cpp  PdfPageProvider.h  PreviewController.cpp  PreviewController.h
src/1_preprocess/: EnhanceProcessor.cpp  EnhanceProcessor.h  ImageAnalyzer.cpp  ImageAnalyzer.h  ImageLoader.cpp  ImageLoader.h  PageJob.h  Preprocess_Pipeline.cpp  Preprocess_Pipeline.h  StrategySelector.cpp  StrategySelector.h
src/1_preprocess/filters/: adaptive_threshold.cpp  adaptive_threshold.h  background_norm.cpp  background_norm.h  clahe.cpp  clahe.h  gaussian.cpp  gaussian.h  sauvola.cpp  sauvola.h  shadow_removal.cpp  shadow_removal.h  sharpen.cpp  sharpen.h
src/2_ocr/: OcrMultipassSelector.cpp  OcrMultipassSelector.h  OcrPageWorker.cpp  OcrPageWorker.h  OcrPassConfig.h  OcrPipeLineController.cpp  OcrPipeLineController.h  OcrPipeLineWorker.cpp  OcrPipeLineWorker.h  OcrResult.h  OcrTsvQuality.cpp  OcrTsvQuality.h
src/3_LineTextBuilder/: LineRow.h  LineTable.h  LineTableSerializer.cpp  LineTableSerializer.h  LineTextBuilder.cpp  LineTextBuilder.h
src/4_edit_lines/: EditLinesController.cpp  EditLinesController.h  EditLinesControllerEvents.h  LineHitTest.cpp  LineHitTest.h  LineTableModel.cpp  LineTableModel.h  LineTextDelegate.cpp  LineTextDelegate.h
src/5_document/: DocumentBuilder.cpp  DocumentBuilder.h  DocumentDebugWriter.cpp  DocumentDebugWriter.h  DocumentModel.h
src/5_export/: ExportController.cpp  ExportController.h  ExportTextNormalizer.cpp  ExportTextNormalizer.h
src/5_export/docx_export/: DocxExporter.cpp  DocxExporter.h
src/5_export/odt_export/: OdtExporter.cpp  OdtExporter.h
src/5_export/txt_export/: TxtExporter.cpp  TxtExporter.h
src/core/: ConfigManager.cpp  ConfigManager.h  CrashHandler.cpp  CrashHandler.h  LanguageManager.cpp  LanguageManager.h  LogRouter.cpp  LogRouter.h  PerformanceProfiler.cpp  PerformanceProfiler.h  ProgressManager.cpp  ProgressManager.h  ResourceManager.cpp  ResourceManager.h  RuntimePolicyManager.cpp  RuntimePolicyManager.h  ThemeManager.cpp  ThemeManager.h  ThreadPoolGuard.cpp  ThreadPoolGuard.h  VirtualPage.h  ocrPdfCache.cpp  ocrPdfCache.h  pdfDocumentService.cpp  pdfDocumentService.h
src/core/layout/: OdtLayoutModel.cpp  OdtLayoutModel.h
src/core/ocr/: LanguageDownloader.cpp  LanguageDownloader.h  LanguageMeta.h  OcrLanguageManager.cpp  OcrLanguageManager.h  OcrProfileStorage.cpp  OcrProfileStorage.h  TessdataManager.cpp  TessdataManager.h
src/core/processors/: InputProcessor.cpp  InputProcessor.h  RecognitionProcessor.cpp  RecognitionProcessor.h
src/core/providers/: baseProvider.cpp  baseProvider.h
src/core/runtime/: CancelToken.h
src/core/services/: PopplerService.cpp  PopplerService.h
src/systeminfo/: systeminfo.cpp  systeminfo.h
ui/: OcrCompletionDialog.ui  aboutdialog.ui  exportdialog.ui  helpdialog.ui  mainwindow.ui  settingsdialog.ui
